Fixed problem where selecting files in the explorer table would cause the scroll position to jump in Chrome.

--- a/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
+++ b/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
@@ -1036,4 +1036,9 @@
 	
 	
 	
+	
+	.v-table, .v-table * {
+	    /* Turn off Chrome scroll anchoring because it doesn't work with Vaadin tables and produces weird "jumping" effects when updating a table. */ 
+		overflow-anchor: none;
+	}
 }
